--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.8.3",
     "pinia": "^2.0.14",
     "vue": "^3.2.13",
-    "vue-axios": "^3.4.1"
+    "vue-axios": "^3.4.1",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
